--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
   },
   "devDependencies": {
     "vite": "^5.4.1"
+  },
+  "dependencies": {
+    "source-map-support": "^0.5.21",
+    "three": "^0.169.0"
   }
 }
